@@ -3,6 +3,7 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
   - added ACPS::RPM and dzil rpmspec command
   - @ACPS::Legacy and ACPS::Legacy for non Dist::Zilla aware dists
+  - create .dzil/config.ini if it doesn't already exist.
 
 0.05      2012-07-26 12:48:53 America/New_York
   - fix some deps
